# hermes-mcp-login

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: hermes-mcp-login.service
src/hermes_mcp_login/: __init__.py  __main__.py  app.py  config.py  control.py  hermes.py
tests/: test_app.py
